SUBDIRS= \
 toolkit \
 proto

otestpoint_incdir = $(includedir)/otestpoint

otestpoint_inc_HEADERS = \
 broker.h \
 brokerbuilder.h \
 controller.h \
 probebuilder.h \
 probe.h \
 probe.inl \
 probeplugin.h \
 probeservice.h \
 probeserviceuser.h \
 recorder.h \
 recorderbuilder.h \
 types.h

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(otestpoint_testpoint_incdir)
