SUBDIRS= \
 log

otestpoint_tookit_incdir = $(includedir)/otestpoint/toolkit

otestpoint_tookit_inc_HEADERS = \
 addrinfo.h \
 application.h \
 exception.h \
 exception.inl \
 lifecycleapplication.h \
 lifecycle.h \
 pycompat.h \
 pythonutils.h \
 raiiobject.h \
 raiipython.h \
 raiisqlite3.h \
 raiizmq.h \
 servicesingleton.h \
 singleton.h \
 stringto.h \
 stringto.inl \
 transaction.h \
 version.h.in

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(otestpoint_tookit_incdir)
